# tbw-capital

./: .gitignore  README.md  tbw-capital.code-workspace
autotrader/: pyproject.toml  run.sh
autotrader/src/: exceptions.py  executor.py  locations.json  main.py  trader.py
autotrader/src/clients/: gds_client.py
autotrader/src/clients/gds/: gds_client.py
autotrader/src/clients/gds/models/: session_metadata.py
autotrader/src/clients/gds/models/config/: live_config.py  strat_config.py
autotrader/src/clients/gds/models/exchange/: exchange.py  exchange_slot.py  exchange_slot_state.py
autotrader/src/clients/gds/models/inventory/: inventory.py
autotrader/src/clients/gds/models/player/: camera.py  player_state.py
autotrader/src/clients/price/: exceptions.py  price_client.py
autotrader/src/clients/price/models/: item_metadata.py  price.py  price_data_snapshot.py  price_window.py
autotrader/src/clients/tdp/: exceptions.py  tdp_client.py
autotrader/src/config/: app_config.py  autotrader_config.py
autotrader/src/data/: locations.json
autotrader/src/interface/: container_metadata.py  controller.py  exceptions.py  location.py  player.py  screen_locator.py
autotrader/src/models/: location.py  order.py
autotrader/src/strategy/: action.py  constants.py  exceptions.py  mm.py  strategy.py  strategy_factory.py  strategy_manager.py
autotrader/src/strategy/implementations/: mm.py
autotrader/src/utils/: abstract_dataclasses.py  logging.py
core/: .openapi-generator-ignore  pyproject.toml
core/core/: logger.py  redis_object.py
core/core/clients/: base_client.py  service.py
core/core/clients/gds/: exceptions.py  gds_client.py
core/core/clients/gds/models/: session_metadata.py
core/core/clients/gds/models/chat/: chat_box.py  message.py
core/core/clients/gds/models/config/: live_config.py  top_level_config.py
core/core/clients/gds/models/exchange/: exchange.py  exchange_slot.py  exchange_slot_state.py
core/core/clients/gds/models/inventory/: inventory.py  item.py
core/core/clients/gds/models/player/: player_location.py  player_state.py
core/core/clients/price/: exceptions.py  price_client.py
core/core/clients/price/models/: price.py  price_data_snapshot.py
core/core/clients/redis/: exceptions.py  redis_client.py
core/core/clients/redis/models/: redis_object.py
core/core/clients/redis/models/buy_limit/: buy_limit.py
core/core/clients/redis/models/pnl/: pnl.py  pnl_snapshot.py
core/core/clients/redis/models/trade_session/: offer_metadata.py  offer_type.py  order.py  order_metadata.py  start_metadata.py  trade.py  trade_session.py
core/core/clients/tdp/: exceptions.py  tdp_client.py
core/core/clients/tdp/models/: item_container.py
core/core/clients/tdp/stubs/: __init__.py  buy_limit.py  limits.py  metrics.py  session.py  trades.py
core/core/config/: app_config.py  environment.py  exceptions.py
core/core/tracking/: book_keeper.py
core/scripts/: delete_session.py  generate_stubs.sh  refresh_buy_limits.py  upgrade_core.sh
(+60 files in other folders)
