[tool.poetry]
name = "core"
version = "0.1.0"
description = "Shared library for python services in TBW Capital"
authors = ["Rahul Nambiar <rahbiar@gmail.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "core", to = "core" },
    { include = "clients", from = "core", to = "core" },
    { include = "config", from = "core", to = "core" },
]

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
